# slurmcmc

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: example_mcmc.py  example_mcmc_and_mc_comparison.py  example_mcmc_surrogate.py  example_optimization.py  example_optimization_algorithms_comparison.py
examples/docs/: mcmc.md  mcmc_and_mc_comparison.md  mcmc_surrogate.md  optimization.md  optimization_algorithms_comparison.md
slurmcmc/: botorch_optimizer.py  general_utils.py  history.py  import_utils.py  mcmc.py  optimization.py  slurm_utils.py
tests/: conftest.py  mock_slurm.py  run_all_tests.py  submitit_defaults.py  test_function_wrapper.py  test_map_local.py  test_map_local_imported_fun.py  test_map_slurm.py  test_mcmc.py  test_minimize.py  test_mock_slurm.py  test_slurm_mcmc.py  test_slurm_minimize.py  test_slurmpool_local.py  test_slurmpool_localmap.py  test_slurmpool_slurm.py
tests/example_module_dir/: example_module.py
tests/test_module_dir/: test_module.py
